tests/valid/trait/method_call_short_ufcs_local_inferred_generic_empty_struct_literal_receiver.facet
struct Token<T> {}

trait Runner {
  fn run(self: Self) -> ();
}

impl Runner for unrestricted Token<unrestricted isize> {
  fn run(self: Self) -> () {
    ()
  }
}

fn main() -> unrestricted () {
  let x = Token<unrestricted isize> {};
  (Runner::run x)
}
