tests/invalid/function/explicit_generic_call_bound_unsatisfied.facet
trait Show;

fn keep<T>(x: affine T) -> affine T where T: Show {
  x
}

fn main() -> affine isize {
  (keep<affine isize> 1)
}
